--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,79 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /* General */
+
+  img {
+    @apply w-full;
+  }
+
+  input {
+    @apply py-1.5 text-2xl text-right border-2 border-transparent border-solid cursor-pointer bg-secondary-shade-of-gray text-secondary-very-dark-cyan w-full;
+  }
+
+  input:focus {
+    @apply outline-none border-secondary-cyan;
+  }
+
+  /* Utilities */
+
+  .selected {
+    @apply text-secondary-very-dark-cyan bg-primary-strong-cyan !important;
+  }
+
+  .warning-message {
+    @apply hidden text-right text-secondary-shade-of-red;
+  }
+
+  /* Calculator container */
+
+  .tip-btn {
+    @apply px-4 py-2 text-2xl text-center text-white bg-secondary-very-dark-cyan hover:bg-secondary-cyan-hover hover:text-secondary-very-dark-cyan;
+  }
+
+  .tip-input {
+    @apply px-3;
+  }
+}
+
+/* General */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+/* Utilities */
+
+.tip-input::-webkit-input-placeholder {
+  color: hsl(186, 14%, 43%);
+}
+
+.tip-input:-moz-placeholder {
+  color: hsl(186, 14%, 43%);
+  opacity: 1;
+}
+
+.tip-input::-moz-placeholder {
+  color: hsl(186, 14%, 43%);
+  opacity: 1;
+}
+
+.tip-input:-ms-input-placeholder {
+  color: hsl(186, 14%, 43%);
+}
+
+.tip-input::-ms-input-placeholder {
+  color: hsl(186, 14%, 43%);
+}
+
+.tip-input::placeholder {
+  color: hsl(186, 14%, 43%);
+}
