Build a tip calculation functionality - calculate a tip by using a formula for tip calculation based on bill value with clicked button and display it on the user interface

--- a/src/input.css
+++ b/src/input.css
@@ -23,6 +23,10 @@
 
   /* Utilities */
 
+  .empty-field {
+    @apply border-secondary-shade-of-red;
+  }
+
   .selected {
     @apply text-secondary-very-dark-cyan bg-primary-strong-cyan !important;
   }
@@ -32,7 +36,7 @@
   }
 
   .warning-message {
-    @apply hidden text-right text-secondary-shade-of-red;
+    @apply text-right text-secondary-shade-of-red;
   }
 
   /* Calculator container */
