Build a tip calculation functionality - finish the reset functionality and the complete application

--- a/src/input.css
+++ b/src/input.css
@@ -27,6 +27,10 @@
     @apply border-secondary-shade-of-red;
   }
 
+  .input {
+    @apply pr-4 pl-11;
+  }
+
   .selected {
     @apply text-secondary-very-dark-cyan bg-primary-strong-cyan !important;
   }
